update transactions
